# aopm

./: Makefile  README.md  TODO.txt  compiler.py  configure.sh  install.py
configs/: aopm.conf
keys/aopm/: aopkey.json  key.asc
src/: core.py
src/api/aopmAPI/: README.md  pyproject.toml
src/api/aopmAPI/aopm_api.egg-info/: PKG-INFO
src/dev/: main.py
src/lib/api/aopmAPI/: README.md
src/lib/api/aopmAPI/aopmAPI/: main.py
src/lib/api/aopmAPI/aopm_api.egg-info/: SOURCES.txt  top_level.txt
src/modules/: help.py  install.py  key.py  module.py  remove.py  repo.py  search.py  version.py
