[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aopm_api"
version = "1.0.0"
authors = [{name="GusDev", email="axok.os.team@gmail.com"}]
description = "The AOPM (Axok!_OS Package Manager) API"
readme = "README.md"
requires-python = ">=3.8"